--- a/livres.html
+++ b/livres.html
@@ -1199,55 +1199,55 @@
       </figcaption>
     </figure>
 
-    <!--Livre 75
+    <!--Livre 75-->
 <figure>
-  <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
+  <a href="https://www.amazon.fr/Lex%C3%A9cution-Robert-Badinter/dp/2213595445/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1585932576&sr=8-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/417X8CC770L.jpg" alt="Badinter 1" class="books" /></a>
   <figcaption>
-    Saphia Azzeddine
+    Robert Badinter
   </figcaption>
   <figcaption>
-    Bilqiss
-  </figcaption>
-  <figcaption>
-    18,00€
-  </figcaption>
-</figure>
--->
-
-    <!--Livre 76
-<figure>
-  <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
-  <figcaption>
-    Saphia Azzeddine
-  </figcaption>
-  <figcaption>
-    Sa mère
+    L'Exécution
   </figcaption>
   <figcaption>
     19,00€
   </figcaption>
-</figure>-->
+</figure>
+
+
+    <!--Livre 76-->
+<figure>
+  <a href="https://www.amazon.fr/LAbolition-Robert-Badinter/dp/2213607060/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1585932576&sr=8-3" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81CHvoMUMQL.jpg" alt="Badinter 2" class="books" /></a>
+  <figcaption>
+    Robert Badinter
+  </figcaption>
+  <figcaption>
+    L'Abolition
+  </figcaption>
+  <figcaption>
+    19,00€
+  </figcaption>
+</figure>
   </div>
 
 
-  <!--  <div class="booksLine">
-Livre 77
+    <div class="booksLine">
+<!--Livre 77-->
 <figure>
-  <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
-      src="https://images-na.ssl-images-amazon.com/images/I/517sBNNkPyL.jpg" alt="Tendre Est La Nuit" class="books" /></a>
+  <a href="https://www.amazon.fr/%C3%89pines-Roses-Robert-Badinter/dp/2253164372/ref=tmm_other_meta_binding_swatch_0?_encoding=UTF8&qid=1585932576&sr=8-4" target="_blank"> <img
+      src="https://images-na.ssl-images-amazon.com/images/I/81Tf-UZgNaL.jpg" alt="Badinter 3" class="books" /></a>
   <figcaption>
-    Francis Scott Fitzgerald
+    Robert Badinter
   </figcaption>
   <figcaption>
-    Tendre est la nuit
+    Les Épines et les Roses
   </figcaption>
   <figcaption>
-    7,20€
+    7,40€
   </figcaption>
 </figure>
--->
 
-  <!--Livre 78
+
+  <!--Livre 78-->
 <figure>
   <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
   <figcaption>
@@ -1260,7 +1260,7 @@ Livre 77
     17,90€
   </figcaption>
 </figure>
--->
+
 
   <!--Livre 79
 <figure>
@@ -1289,9 +1289,9 @@ Livre 77
   <figcaption>
     19,00€
   </figcaption>
-</figure>
+</figure>-->
 </div>
--->
+
 
 </body>
 
