--- a/livres.html
+++ b/livres.html
@@ -1247,7 +1247,7 @@
 </figure>
 
 
-  <!--Livre 78-->
+  <!--Livre 78
 <figure>
   <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
   <figcaption>
@@ -1259,7 +1259,7 @@
   <figcaption>
     17,90€
   </figcaption>
-</figure>
+</figure>-->
 
 
   <!--Livre 79
