--- a/livres.html
+++ b/livres.html
@@ -1200,98 +1200,97 @@
     </figure>
 
     <!--Livre 75-->
-<figure>
-  <a href="https://www.amazon.fr/Lex%C3%A9cution-Robert-Badinter/dp/2213595445/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1585932576&sr=8-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/417X8CC770L.jpg" alt="Badinter 1" class="books" /></a>
-  <figcaption>
-    Robert Badinter
-  </figcaption>
-  <figcaption>
-    L'Exécution
-  </figcaption>
-  <figcaption>
-    19,00€
-  </figcaption>
-</figure>
-
+    <figure>
+      <a href="https://www.amazon.fr/Lex%C3%A9cution-Robert-Badinter/dp/2213595445/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1585932576&sr=8-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/417X8CC770L.jpg"
+          alt="Badinter 1" class="books" /></a>
+      <figcaption>
+        Robert Badinter
+      </figcaption>
+      <figcaption>
+        L'Exécution
+      </figcaption>
+      <figcaption>
+        19,00€
+      </figcaption>
+    </figure>
 
     <!--Livre 76-->
-<figure>
-  <a href="https://www.amazon.fr/LAbolition-Robert-Badinter/dp/2213607060/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1585932576&sr=8-3" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81CHvoMUMQL.jpg" alt="Badinter 2" class="books" /></a>
-  <figcaption>
-    Robert Badinter
-  </figcaption>
-  <figcaption>
-    L'Abolition
-  </figcaption>
-  <figcaption>
-    19,00€
-  </figcaption>
-</figure>
+    <figure>
+      <a href="https://www.amazon.fr/LAbolition-Robert-Badinter/dp/2213607060/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1585932576&sr=8-3" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81CHvoMUMQL.jpg" alt="Badinter 2"
+          class="books" /></a>
+      <figcaption>
+        Robert Badinter
+      </figcaption>
+      <figcaption>
+        L'Abolition
+      </figcaption>
+      <figcaption>
+        19,00€
+      </figcaption>
+    </figure>
   </div>
 
+  <div class="booksLine">
+    <!--Livre 77-->
+    <figure>
+      <a href="https://www.amazon.fr/%C3%89pines-Roses-Robert-Badinter/dp/2253164372/ref=tmm_other_meta_binding_swatch_0?_encoding=UTF8&qid=1585932576&sr=8-4" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/81Tf-UZgNaL.jpg" alt="Badinter 3" class="books" /></a>
+      <figcaption>
+        Robert Badinter
+      </figcaption>
+      <figcaption>
+        Les Épines et les Roses
+      </figcaption>
+      <figcaption>
+        7,40€
+      </figcaption>
+    </figure>
 
-    <div class="booksLine">
-<!--Livre 77-->
-<figure>
-  <a href="https://www.amazon.fr/%C3%89pines-Roses-Robert-Badinter/dp/2253164372/ref=tmm_other_meta_binding_swatch_0?_encoding=UTF8&qid=1585932576&sr=8-4" target="_blank"> <img
-      src="https://images-na.ssl-images-amazon.com/images/I/81Tf-UZgNaL.jpg" alt="Badinter 3" class="books" /></a>
-  <figcaption>
-    Robert Badinter
-  </figcaption>
-  <figcaption>
-    Les Épines et les Roses
-  </figcaption>
-  <figcaption>
-    7,40€
-  </figcaption>
-</figure>
+    <!--Livre 78-->
+    <figure>
+      <a href="https://www.amazon.fr/Lurking-How-Person-Became-User/dp/1250785758/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1587736100&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81tTTp%2BV3WL.jpg"
+          alt="Person become User" class="books" /></a>
+      <figcaption>
+        Joanne McNeil
+      </figcaption>
+      <figcaption>
+        How a Person Became a User
+      </figcaption>
+      <figcaption>
+        17,48€
+      </figcaption>
+    </figure>
 
+    <!--Livre 79-->
+    <figure>
+      <a href="https://www.amazon.fr/Abolish-Silicon-Valley-Technology-Capitalism/dp/1912248700/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1587736118&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91q4pnxxDiL.jpg"
+          alt="Silicon Valley" class="books" /></a>
+      <figcaption>
+        Wendy Liu
+      </figcaption>
+      <figcaption>
+        Abolish Silicon Valley
+      </figcaption>
+      <figcaption>
+        Indisponible pour le moment
+      </figcaption>
+    </figure>
 
-  <!--Livre 78
-<figure>
-  <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
-  <figcaption>
-    Saphia Azzeddine
-  </figcaption>
-  <figcaption>
-    Combien veux-tu m'épouser ?
-  </figcaption>
-  <figcaption>
-    17,90€
-  </figcaption>
-</figure>-->
-
-
-  <!--Livre 79
-<figure>
-  <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
-  <figcaption>
-    Saphia Azzeddine
-  </figcaption>
-  <figcaption>
-    Bilqiss
-  </figcaption>
-  <figcaption>
-    18,00€
-  </figcaption>
-</figure>
--->
-
-  <!--Livre 80
-<figure>
-  <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
-  <figcaption>
-    Saphia Azzeddine
-  </figcaption>
-  <figcaption>
-    Sa mère
-  </figcaption>
-  <figcaption>
-    19,00€
-  </figcaption>
-</figure>-->
-</div>
-
+    <!--Livre 80-->
+    <figure>
+      <a href="https://www.amazon.fr/Give-People-Money-Universal-Revolutionize/dp/1524758760/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1587736140&sr=8-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/8151kosx5dL.jpg"
+          alt="Give People Money" class="books" /></a>
+      <figcaption>
+        Annie Lowrey
+      </figcaption>
+      <figcaption>
+        Give People Money
+      </figcaption>
+      <figcaption>
+        16,58€
+      </figcaption>
+    </figure>
+  </div>
 
 </body>
 
