--- a/autres.html
+++ b/autres.html
@@ -21,7 +21,7 @@
   </navbar>
 
   <div class="othersLine">
-    <!--Autres 1-->
+    <!--Autres 1
     <figure>
       <a href="https://shop.vitality.gg/products/maillot-officiel-team-vitality-floque?variant=29379536715894" target="_blank"> <img
           src="http://cdn.shopify.com/s/files/1/0049/2293/3366/products/blck-orange_32fb5c4b-2e1e-43fd-a81e-8411bd74226f_600x800_crop_center.jpg" alt="Vitality" class="others" /></a>
@@ -37,9 +37,9 @@
       <figcaption>
         79,99€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Autres 2-->
+    <!--Autres 2
     <figure>
       <a href="https://shop.vitality.gg/products/casquette-team-vitality-1" target="_blank"> <img src="https://cdn.shopify.com/s/files/1/0049/2293/3366/products/2019-casquette-02_600x800.jpg?v=1550850258" alt="Casquette Vitality"
           class="others" /></a>
@@ -49,9 +49,9 @@
       <figcaption>
         24,99€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Autres 3-->
+    <!--Autres 3
     <figure>
       <a href="https://shop.vitality.gg/products/porte-cles-team-vitality" target="_blank"> <img src="https://cdn.shopify.com/s/files/1/0049/2293/3366/products/portecle_600x800.jpg?v=1540291632" alt="Porte Clé Vitality" class="others" /></a>
       <figcaption>
@@ -60,9 +60,9 @@
       <figcaption>
         8,99€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Autres 4-->
+    <!--Autres 4
     <figure>
       <a href="https://shop.gotaga.tv/collections/accessoires/products/snapback-dark" target="_blank"> <img src="https://cdn.shopify.com/s/files/1/0045/8230/9955/products/Copie_de_Copie_de_Copie_de_DSC01555_2048x2048.jpg?v=1549309086"
           alt="Casquette Gotaga" class="others" /></a>
@@ -79,10 +79,10 @@
         25,00€
       </figcaption>
     </figure>
-  </div>
+  </div>-->
 
   <div class="othersLine">
-    <!--Autres 5-->
+    <!--Autres 5
     <figure>
       <a href="https://www.amazon.fr/Thrones-Tr%C3%B4ne-Lint%C3%A9grale-Saisons-Blu-Ray/dp/B07SZBK3WR/ref=sr_1_8?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1VGZDA53QY49R&keywords=game+of+thrones&qid=1573230847&sprefix=game+of+t%2Caps%2C159&sr=8-8"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71Xza7-HIhL._SL1000_.jpg" alt="Intégrale GoT" class="others" /></a>
@@ -98,9 +98,9 @@
       <figcaption>
         130,49€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Autres 6-->
+    <!--Autres 6
     <figure>
       <a href="https://www.amazon.fr/Friends-lInt%C3%A9grale-Saisons-Coffret-Blu-Ray/dp/B008HQCPCU/ref=cm_cr_arp_d_product_top?ie=UTF8" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/919CzxAoKRL._SL1500_.jpg"
           alt="Friends - L'intégrale" class="others" /></a>
@@ -113,9 +113,9 @@
       <figcaption>
         72,55€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Autres 7-->
+    <!--Autres 7
     <figure>
       <a href="https://cheh-moman.niceshop.co/product/Accessoires/Mug/Mug-China-Number-One/5cb49c34839e400010e596d7" target="_blank"> <img src="https://s3.eu-central-1.amazonaws.com/balibart-s3/Products/5cb49c34839e400010e596d7/Mockups/custom.png"
           alt="Tasse Moman" class="others" /></a>
@@ -125,9 +125,9 @@
       <figcaption>
         14,99€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Autres 8-->
+    <!--Autres 8
     <figure>
       <a href="https://www.amazon.fr/Heures-sombres-Blu-ray-Digital/dp/B07995WLYK/ref=tmm_blu_title_0?_encoding=UTF8&amp;qid=&amp;sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71XjGQ9iIVL._SL1290_.jpg"
           alt="Les Heures Sombres" class="others" /></a>
@@ -141,7 +141,7 @@
         10,98€
       </figcaption>
     </figure>
-  </div>
+  </div>-->
 
   <div class="othersLine">
     <!--Autres 9
@@ -156,7 +156,7 @@
       </figcaption>
     </figure>-->
 
-    <!--Autres 10-->
+    <!--Autres 10
     <figure>
       <a href="https://www.boutiquezerator.com/product-page/mug-zerator" target="_blank"> <img
           src="https://static.wixstatic.com/media/f9fe86_c1b2b957e346405ab7120a906830da44~mv2.jpg/v1/fill/w_498,h_664,al_c,q_85,usm_0.66_1.00_0.01/f9fe86_c1b2b957e346405ab7120a906830da44~mv2.webp" alt="Mug Zerator" class="others" /></a>
@@ -166,9 +166,9 @@
       <figcaption>
         19,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Autres 11-->
+    <!--Autres 11
     <figure>
       <a href="https://www.amazon.fr/Chernobyl-Blu-Ray-Jared-Harris/dp/B07SZGSXT3?pf_rd_p=eab93c21-6a33-4780-aa56-35c8fe5fc951&pd_rd_wg=srzCG&pf_rd_r=JRY7AN681R6AYFAFNDXQ&ref_=pd_gw_cr_simh&pd_rd_w=xJ0th&pd_rd_r=298834d5-8235-4e45-8dcb-0eda62497f72"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/41p%2BZnkfk7L.jpg" alt="Chernobyl" class="others" /></a>
@@ -181,7 +181,7 @@
       <figcaption>
         24,99€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Autres 12
     <figure>
