--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -21,6 +21,7 @@
   </navbar>
 
   <div class="gamesLine">
+
     <!--Jeu 1
     <figure>
       <a href="https://www.amazon.fr/Legend-Zelda-Links-Awakening/dp/B07QZFLVM7/ref=pd_sim_63_11?_encoding=UTF8&pd_rd_i=B07QZFLVM7&pd_rd_r=0628726c-cc8b-4a47-8bf6-850d5c0d241c&pd_rd_w=G1Xo9&pd_rd_wg=Ecbfq&pf_rd_p=79de6a4a-b21a-4694-99e3-cde9267231ac&pf_rd_r=NEV47M1RK88HJGD04JFG&psc=1&refRID=NEV47M1RK88HJGD04JFG"
@@ -44,7 +45,7 @@
       </figcaption>
     </figure>-->
 
-    <!--Jeu 3-->
+    <!--Jeu 3
     <figure>
       <a href="https://www.amazon.fr/Nintendo-1014265-Mario-Kart-Deluxe/dp/B01N1081RO/ref=pd_sim_63_10?_encoding=UTF8&pd_rd_i=B01N1081RO&pd_rd_r=0628726c-cc8b-4a47-8bf6-850d5c0d241c&pd_rd_w=G1Xo9&pd_rd_wg=Ecbfq&pf_rd_p=79de6a4a-b21a-4694-99e3-cde9267231ac&pf_rd_r=NEV47M1RK88HJGD04JFG&psc=1&refRID=NEV47M1RK88HJGD04JFG"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91BphPXVYVL._SL1500_.jpg" alt="Mario Kart" class="game" /></a>
@@ -54,7 +55,7 @@
       <figcaption>
         49,99€ sur Amazon
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Jeu 4
     <figure>
@@ -70,7 +71,7 @@
   </div>
 
   <div class="gamesLine">
-    <!--Jeu 5-->
+    <!--Jeu 5
     <figure>
       <a href="https://www.amazon.fr/Nintendo-0045496420888-Super-Mario-Odyssey/dp/B072KJWYL9/ref=pd_sim_63_8?_encoding=UTF8&pd_rd_i=B072KJWYL9&pd_rd_r=faba7ffe-f309-4f16-9853-9816416fa012&pd_rd_w=w36ZL&pd_rd_wg=h1L5Z&pf_rd_p=79de6a4a-b21a-4694-99e3-cde9267231ac&pf_rd_r=C8DP4MVYDHMZ7AK23MT4&psc=1&refRID=C8DP4MVYDHMZ7AK23MT4"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71YHciwZNAL._SL1000_.jpg" alt="Super Mario" class="game" /></a>
@@ -80,9 +81,9 @@
       <figcaption>
         44,49€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Jeu 6-->
+    <!--Jeu 6
     <figure>
       <a href="https://www.amazon.fr/Nintendo-Super-Smash-Bros-Ultimate/dp/B07DPQD26J/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2A8N9OZP36T2M&keywords=smash+bros+ultimate&qid=1574113818&s=videogames&sprefix=smash%2Cvideogames%2C140&sr=1-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81nTBvXpItL._SL1339_.jpg" alt="Smash Bros" class="game" /></a>
@@ -92,7 +93,7 @@
       <figcaption>
         49,00€ sur Amazon
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Jeu 7
     <figure>
