--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
   </div>
 
   <p class="dateMAJ">
-    Mise à jour liste le 24 avril 2020
+    Mise à jour liste le 18 juin 2020
   </p>
+  <p class="dateMAJ2">
     Mise à jour prix le 23 novembre 2019
   </p>
 
