--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -22,28 +22,30 @@
 
   <div class="gamesLine">
 
-    <!--Jeu 1
+    <!--Jeu 1-->
     <figure>
-      <a href="https://www.amazon.fr/Legend-Zelda-Links-Awakening/dp/B07QZFLVM7/ref=pd_sim_63_11?_encoding=UTF8&pd_rd_i=B07QZFLVM7&pd_rd_r=0628726c-cc8b-4a47-8bf6-850d5c0d241c&pd_rd_w=G1Xo9&pd_rd_wg=Ecbfq&pf_rd_p=79de6a4a-b21a-4694-99e3-cde9267231ac&pf_rd_r=NEV47M1RK88HJGD04JFG&psc=1&refRID=NEV47M1RK88HJGD04JFG"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91DFZJlRAsL._SL1500_.jpg" alt="Zelda" class="game" /></a>
+      <a href="*"
+        target="_blank"> <img src="https://vignette.wikia.nocookie.net/crashban/images/f/fb/It%27s_about_time.png/revision/latest?cb=20200622174313" alt="Crash" class="game" /></a>
       <figcaption>
-        The Legend of Zelda: Link's Awakening
+        Crash Bandicoot 4 : It's about time
       </figcaption>
       <figcaption>
-        44,49€ sur Amazon
+        69,99 en précommande
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Jeu 2
+    <!--Jeu 2-->
     <figure>
-      <a href="https://www.amazon.fr/Sony-MediEvil-PS4/dp/B07S31PDMW/ref=pd_sbs_63_10?_encoding=UTF8&pd_rd_i=B07S31PDMW&pd_rd_r=3b0e3e96-e177-435b-82b2-68912482730c&pd_rd_w=Ynh5I&pd_rd_wg=wBDIQ&pf_rd_p=26d54ac2-ee81-4c62-8302-1e18ced12245&pf_rd_r=F6VSN7G9329B1EM9A27K&psc=1&refRID=F6VSN7G9329B1EM9A27K" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81nVKa-ZJ4L._SL1500_.jpg" alt="Medievil" class="game" /></a>
+      <a href="#" target="_blank"> <img
+          src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/9bdac691416203.5e31550e9a287.jpg"
+          alt="NBA 2K21" class="game" /></a>
       <figcaption>
-        Medievil
+        NBA 2K21 - Edition Legende
       </figcaption>
       <figcaption>
-        24,99€
+        ???€ sur PlayStation
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Jeu 3
     <figure>
