--- a/livres.html
+++ b/livres.html
@@ -32,7 +32,7 @@
         La Société du Spectacle
       </figcaption>
       <figcaption>
-        6,80€
+        6,90€
       </figcaption>
     </figure>
 
@@ -62,7 +62,7 @@
         La supplication
       </figcaption>
       <figcaption>
-        7,00€
+        7,60€
       </figcaption>
     </figure>
 
@@ -147,7 +147,7 @@
   <div class="booksLine">
     <!--Livre 9-->
     <figure>
-      <a href="https://www.amazon.fr/Gomorra-lempire-camorra-Roberto-Saviano/dp/2072798108/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1576243714&sr=8-3" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81OAmpbvz5L.jpg"
+      <a href="https://www.amazon.fr/Gomorra-ROBERTO-SAVIANO/dp/8483468468/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1576243714&sr=8-3" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81OAmpbvz5L.jpg"
           alt="Gomorra" class="books" /></a>
       <figcaption>
         Roberto Saviano
@@ -156,7 +156,7 @@
         Gomorra
       </figcaption>
       <figcaption>
-        9,50€
+        9,95€
       </figcaption>
     </figure>
 
@@ -275,7 +275,7 @@
         La Fêlure
       </figcaption>
       <figcaption>
-        7,40€
+        Rupture de stock sur Amazon
       </figcaption>
     </figure>
   </div>
@@ -292,7 +292,7 @@
         Tendre est la nuit
       </figcaption>
       <figcaption>
-        7,20€
+        En stock le 18 juillet 2020
       </figcaption>
     </figure>
 
@@ -399,7 +399,7 @@
         Narthex
       </figcaption>
       <figcaption>
-        20,00€
+        Rupture de stock sur Amazon
       </figcaption>
     </figure>
   </div>
@@ -449,7 +449,7 @@
         sous une ombrelle trouée
       </figcaption>
       <figcaption>
-        8,40€
+        8,50€
       </figcaption>
     </figure>
 
@@ -464,7 +464,7 @@
         C'était bien
       </figcaption>
       <figcaption>
-        8,40€
+        8,50€
       </figcaption>
     </figure>
   </div>
@@ -499,7 +499,7 @@
         que cette vie fut belle
       </figcaption>
       <figcaption>
-        8,40€
+        8,50€
       </figcaption>
     </figure>
 
@@ -532,7 +532,7 @@
         Au plaisir de Dieu
       </figcaption>
       <figcaption>
-        10,20€
+        10,30€
       </figcaption>
     </figure>
   </div>
@@ -549,7 +549,7 @@
         La gloire de l'Empire
       </figcaption>
       <figcaption>
-        12,80€
+        19,56€
       </figcaption>
     </figure>
 
@@ -564,7 +564,7 @@
         Histoire du Juif errant
       </figcaption>
       <figcaption>
-        10,20€
+        10,30€
       </figcaption>
     </figure>
 
@@ -597,7 +597,7 @@
         Seul entre mers et ciels
       </figcaption>
       <figcaption>
-        8,00€
+        8,90€
       </figcaption>
     </figure>
   </div>
@@ -629,7 +629,7 @@
         L'amour de la Vie
       </figcaption>
       <figcaption>
-        7,40€
+        7,50€
       </figcaption>
     </figure>
 
@@ -682,7 +682,7 @@
         Diam's, autobiographie
       </figcaption>
       <figcaption>
-        7,30€
+        Rupture de stock sur Amazon
       </figcaption>
     </figure>
 
@@ -746,6 +746,9 @@
       <figcaption>
         18,00€
       </figcaption>
+      <figcaption>
+      Expédié sous 1 à 3 semaines
+      </figcaption>
     </figure>
 
 
@@ -775,14 +778,14 @@
         Révolte ! Les rebelles du sport
       </figcaption>
       <figcaption>
-        29,95€
+        Rupture de stock sur Amazon
       </figcaption>
     </figure>
 
     <!--Livre 48-->
 
     <figure>
-      <a href="https://www.amazon.fr/Lib%C3%A9rez-votre-cerveau-Idriss-ABERKANE/dp/2266278576/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1573516992&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61ARxYzIhKL.jpg"
+      <a href="https://www.amazon.fr/Lib%C3%A9rez-votre-cerveau-Idriss-ABERKANE/dp/2221215540/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1573516992&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61ARxYzIhKL.jpg"
           alt="Libérez votre cerveau !" class="books" /></a>
       <figcaption>
         Idriss Aberkane
@@ -791,7 +794,7 @@
         Libérez votre cerveau !
       </figcaption>
       <figcaption>
-        7,90€
+        Rupture de stock sur Amazon
       </figcaption>
     </figure>
   </div>
@@ -808,7 +811,7 @@
         Au-delà de tous mes rêves
       </figcaption>
       <figcaption>
-        19,20€
+        Rupture de stock sur Amazon
       </figcaption>
     </figure>
 
@@ -823,7 +826,7 @@
         De l'urgent, du presque rien et du rien du tout
       </figcaption>
       <figcaption>
-        18,50€
+        Rupture de stock sur Amazon
       </figcaption>
     </figure>
 
@@ -837,7 +840,7 @@
         Je chemine avec Hubert Reeves
       </figcaption>
       <figcaption>
-        12,00€
+        Rupture de stock sur Amazon
       </figcaption>
     </figure>
 
@@ -852,13 +855,13 @@
         Déjeuner en paix
       </figcaption>
       <figcaption>
-        17,00€
+        Rupture de stock sur Amazon
       </figcaption>
     </figure>
   </div>
 
   <div class="booksLine">
-    <!--Livre 53-->
+    <!--Livre 53
     <figure>
       <a href="https://www.amazon.fr/mano-negra-obscures-contr%C3%B4lent-football/dp/2755640197/ref=pd_sim_14_6/257-8925375-7060938?_encoding=UTF8&pd_rd_i=2755640197&pd_rd_r=235e5697-56a9-48c6-b2b9-bf1a364899ac&pd_rd_w=WyNZU&pd_rd_wg=rWfyp&pf_rd_p=13666dbd-eacc-4961-ae51-8b11476bba29&pf_rd_r=5HNSAX5WPC8Y512Y15C7&psc=1&refRID=5HNSAX5WPC8Y512Y15C7"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61I3dBZMUXL.jpg" alt="La Mano Negra" class="books" /></a>
@@ -874,7 +877,7 @@
       <figcaption>
         17,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 54-->
     <figure>
@@ -916,7 +919,7 @@
         I'll Show You
       </figcaption>
       <figcaption>
-        23,93€
+        26,12€
       </figcaption>
     </figure>
   </div>
@@ -948,7 +951,7 @@
         Retour intérieur
       </figcaption>
       <figcaption>
-        6,00€
+        7,20€
       </figcaption>
     </figure>
 
@@ -1010,7 +1013,7 @@
         Tête haute
       </figcaption>
       <figcaption>
-        18,00€
+Rupture de stock sur Amazon
       </figcaption>
     </figure>
 
@@ -1072,7 +1075,7 @@
         Ma Mauvaise réputation
       </figcaption>
       <figcaption>
-        18,00€
+        Rupture de stock sur Amazon
       </figcaption>
     </figure>
 
@@ -1133,7 +1136,7 @@
         Bad As I Wanna Be
       </figcaption>
       <figcaption>
-        8,75€
+        8,48€
       </figcaption>
     </figure>
 
@@ -1148,7 +1151,7 @@
         Mamba mentality, ma façon de jouer
       </figcaption>
       <figcaption>
-        24,95€
+        Rupture de stock sur Amazon
       </figcaption>
     </figure>
 
@@ -1180,7 +1183,7 @@
         Les absents, levez le doigt !
       </figcaption>
       <figcaption>
-        15,90€
+        15,90€ - En stock le 23 juillet 2020.
       </figcaption>
     </figure>
 
@@ -1210,7 +1213,7 @@
         L'Exécution
       </figcaption>
       <figcaption>
-        19,00€
+        19,00€ - expédié sous 2 à 3 semaines.
       </figcaption>
     </figure>
 
@@ -1225,7 +1228,7 @@
         L'Abolition
       </figcaption>
       <figcaption>
-        19,00€
+        20,90€
       </figcaption>
     </figure>
   </div>
@@ -1248,7 +1251,7 @@
 
     <!--Livre 78-->
     <figure>
-      <a href="https://www.amazon.fr/Lurking-How-Person-Became-User/dp/1250785758/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1587736100&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81tTTp%2BV3WL.jpg"
+      <a href="https://www.amazon.fr/Lurking-How-Person-Became-User/dp/0374194335/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1587736100&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81tTTp%2BV3WL.jpg"
           alt="Person become User" class="books" /></a>
       <figcaption>
         Joanne McNeil
@@ -1257,7 +1260,7 @@
         How a Person Became a User
       </figcaption>
       <figcaption>
-        17,48€
+        23,11€
       </figcaption>
     </figure>
 
@@ -1272,7 +1275,7 @@
         Abolish Silicon Valley
       </figcaption>
       <figcaption>
-        Indisponible pour le moment
+        12,91€
       </figcaption>
     </figure>
 
@@ -1287,9 +1290,71 @@
         Give People Money
       </figcaption>
       <figcaption>
-        16,58€
+        13,98€
       </figcaption>
     </figure>
+  </div>
+
+  <div class="booksLine">
+    <!--Livre 81-->
+    <figure>
+      <a href="https://www.amazon.fr/Dans-flammes-Notre-Dame-S%C3%A9bastien-Spitzer/dp/2226445579/ref=cm_cr_arp_d_product_top?ie=UTF8" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/817aQDgu4iL.jpg" alt="Notre Dame" class="books" /></a>
+      <figcaption>
+        Sébastien Spitzer
+      </figcaption>
+      <figcaption>
+        Dans les flammes de Notre-Dame
+      </figcaption>
+      <figcaption>
+        19,90€
+      </figcaption>
+    </figure>
+
+    <!--Livre 82-->
+    <figure>
+      <a href="https://www.amazon.fr/White-fran%C3%A7aise-Bret-Easton-ELLIS/dp/2221241177/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1593296847&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/515gvByO9VL.jpg"
+          alt="Ellis - White" class="books" /></a>
+      <figcaption>
+        Bret Easton Ellis
+      </figcaption>
+      <figcaption>
+        White
+      </figcaption>
+      <figcaption>
+        8,92€
+      </figcaption>
+    </figure>
+
+    <!--Livre 83
+    <figure>
+      <a href="https://www.amazon.fr/Abolish-Silicon-Valley-Technology-Capitalism/dp/1912248700/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1587736118&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91q4pnxxDiL.jpg"
+          alt="Silicon Valley" class="books" /></a>
+      <figcaption>
+        Wendy Liu
+      </figcaption>
+      <figcaption>
+        Abolish Silicon Valley
+      </figcaption>
+      <figcaption>
+        Indisponible pour le moment
+      </figcaption>
+    </figure>-->
+
+    <!--Livre 84
+    <figure>
+      <a href="https://www.amazon.fr/Give-People-Money-Universal-Revolutionize/dp/1524758760/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1587736140&sr=8-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/8151kosx5dL.jpg"
+          alt="Give People Money" class="books" /></a>
+      <figcaption>
+        Annie Lowrey
+      </figcaption>
+      <figcaption>
+        Give People Money
+      </figcaption>
+      <figcaption>
+        16,58€
+      </figcaption>
+    </figure>-->
   </div>
 
 </body>
