--- a/autres.html
+++ b/autres.html
@@ -60,23 +60,23 @@
       </figcaption>
     </figure>
 
-    <!--Autres 4
+    <!--Autres 4-->
     <figure>
-      <a href="https://shop.gotaga.tv/collections/accessoires/products/snapback-dark" target="_blank"> <img src="https://cdn.shopify.com/s/files/1/0045/8230/9955/products/Copie_de_Copie_de_Copie_de_DSC01555_2048x2048.jpg?v=1549309086"
-          alt="Casquette Gotaga" class="others" /></a>
+      <a href="*" target="_blank"> <img src="https://static.fnac-static.com/multimedia/Images/FR/NR/49/63/b1/11625289/1507-1/tsp20200219145134/Star-Wars-L-Ascension-de-Skywalker-DVD.jpg"
+          alt="Star Wars" class="others" /></a>
       <figcaption>
-        Casquette Gotaga
+        Blu Ray Star Wars
       </figcaption>
       <figcaption>
-        Version noire
+        L'ascension de Skywalker
       </figcaption>
       <figcaption>
-        Rupture de Stock
+        Voir si dispo à Cora ou autre endroit
       </figcaption>
       <figcaption>
-        25,00€
+        Rupture de stock sur Amazon
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
     <div class="othersLine">
