--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -40,10 +40,10 @@
           src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/9bdac691416203.5e31550e9a287.jpg"
           alt="NBA 2K21" class="game" /></a>
       <figcaption>
-        NBA 2K21 - Edition Legende
+        NBA 2K21 - Edition Légende
       </figcaption>
       <figcaption>
-        ???€ sur PlayStation
+        ???€ sur PlayStation (surement 100 euros)
       </figcaption>
     </figure>
 
