--- a/autres.html
+++ b/autres.html
@@ -45,7 +45,7 @@
       </figcaption>
     </figure>
 
-    <!--Autres 3-->
+    <!--Autres 3
     <figure>
       <a href="https://www.amazon.fr/Thrones-Tr%C3%B4ne-Lint%C3%A9grale-Saisons-Blu-Ray/dp/B07SZBK3WR/ref=sr_1_8?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1VGZDA53QY49R&keywords=game+of+thrones&qid=1573230847&sprefix=game+of+t%2Caps%2C159&sr=8-8"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71Xza7-HIhL._SL1000_.jpg" alt="Intégrale GoT" class="others" /></a>
@@ -58,7 +58,7 @@
       <figcaption>
         117,15€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Autres 4-->
     <figure>
