--- a/livres.html
+++ b/livres.html
@@ -1326,33 +1326,95 @@ Rupture de stock sur Amazon
       </figcaption>
     </figure>
 
+    <!--Livre 83-->
+    <figure>
+      <a href="https://www.amazon.fr/DERNIERS-JUGEMENTS-AVANT-LIQUIDATION-magistrature/dp/2226238719/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1594512282&sr=8-4" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/41sJL99ZhUL.jpg"
+          alt="Derniers jugements avant liquidation" class="books" /></a>
+      <figcaption>
+        Gilbert Thiel
+      </figcaption>
+      <figcaption>
+        Derniers jugements avant liquidation
+      </figcaption>
+      <figcaption>
+        18,25€
+      </figcaption>
+    </figure>
+
+    <!--Livre 84-->
+    <figure>
+      <a href="https://www.amazon.fr/reveille-pas-juge-qui-dort/dp/2213613389/ref=rtpb_1/257-9479405-0879257?_encoding=UTF8&pd_rd_i=2213613389&pd_rd_r=d6ee78b4-4b8c-4b8b-9c26-f3d2e246726f&pd_rd_w=yVHKy&pd_rd_wg=adqlh&pf_rd_p=11fd17e3-2e76-468d-ad1e-fcdf79abf9f0&pf_rd_r=WNFEY9JZD6FWWTG0GSWS&psc=1&refRID=WNFEY9JZD6FWWTG0GSWS" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51VWSZ065EL.jpg"
+          alt="On ne reveille pas un juge qui dort" class="books" /></a>
+      <figcaption>
+        Gilbert Thiel
+      </figcaption>
+      <figcaption>
+        On ne reveille pas un juge qui dort
+      </figcaption>
+      <figcaption>
+        25,00€
+      </figcaption>
+    </figure>
+  </div>
+
+  <div class="booksLine">
+    <!--Livre 81-->
+    <figure>
+      <a href="https://www.amazon.fr/Mafias-Gilbert-Thiel/dp/2213672512/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1594512282&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/91ufrIUt51L.jpg" alt="Mafias" class="books" /></a>
+      <figcaption>
+        Gilbert Thiel
+      </figcaption>
+      <figcaption>
+        Mafias
+      </figcaption>
+      <figcaption>
+        22,00€
+      </figcaption>
+    </figure>
+
+    <!--Livre 82
+    <figure>
+      <a href="https://www.amazon.fr/White-fran%C3%A7aise-Bret-Easton-ELLIS/dp/2221241177/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1593296847&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/515gvByO9VL.jpg"
+          alt="Ellis - White" class="books" /></a>
+      <figcaption>
+        Bret Easton Ellis
+      </figcaption>
+      <figcaption>
+        White
+      </figcaption>
+      <figcaption>
+        8,92€
+      </figcaption>
+    </figure>-->
+
     <!--Livre 83
     <figure>
-      <a href="https://www.amazon.fr/Abolish-Silicon-Valley-Technology-Capitalism/dp/1912248700/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1587736118&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91q4pnxxDiL.jpg"
-          alt="Silicon Valley" class="books" /></a>
+      <a href="https://www.amazon.fr/DERNIERS-JUGEMENTS-AVANT-LIQUIDATION-magistrature/dp/2226238719/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1594512282&sr=8-4" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/41sJL99ZhUL.jpg"
+          alt="Derniers jugements avant liquidation" class="books" /></a>
       <figcaption>
-        Wendy Liu
+        Gilbert Thiel
       </figcaption>
       <figcaption>
-        Abolish Silicon Valley
+        Derniers jugements avant liquidation
       </figcaption>
       <figcaption>
-        Indisponible pour le moment
+        18,25€
       </figcaption>
     </figure>-->
 
     <!--Livre 84
     <figure>
-      <a href="https://www.amazon.fr/Give-People-Money-Universal-Revolutionize/dp/1524758760/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1587736140&sr=8-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/8151kosx5dL.jpg"
-          alt="Give People Money" class="books" /></a>
+      <a href="https://www.amazon.fr/reveille-pas-juge-qui-dort/dp/2213613389/ref=rtpb_1/257-9479405-0879257?_encoding=UTF8&pd_rd_i=2213613389&pd_rd_r=d6ee78b4-4b8c-4b8b-9c26-f3d2e246726f&pd_rd_w=yVHKy&pd_rd_wg=adqlh&pf_rd_p=11fd17e3-2e76-468d-ad1e-fcdf79abf9f0&pf_rd_r=WNFEY9JZD6FWWTG0GSWS&psc=1&refRID=WNFEY9JZD6FWWTG0GSWS" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51VWSZ065EL.jpg"
+          alt="On ne reveille pas un juge qui dort" class="books" /></a>
       <figcaption>
-        Annie Lowrey
+        Gilbert Thiel
       </figcaption>
       <figcaption>
-        Give People Money
+        On ne reveille pas un juge qui dort
       </figcaption>
       <figcaption>
-        16,58€
+        25,00€
       </figcaption>
     </figure>-->
   </div>
