ajout livre Sarkozy

--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -24,8 +24,7 @@
 
     <!--Jeu 1-->
     <figure>
-      <a href="*"
-        target="_blank"> <img src="https://vignette.wikia.nocookie.net/crashban/images/f/fb/It%27s_about_time.png/revision/latest?cb=20200622174313" alt="Crash" class="game" /></a>
+      <a href="*" target="_blank"> <img src="https://vignette.wikia.nocookie.net/crashban/images/f/fb/It%27s_about_time.png/revision/latest?cb=20200622174313" alt="Crash" class="game" /></a>
       <figcaption>
         Crash Bandicoot 4 : It's about time
       </figcaption>
@@ -36,9 +35,7 @@
 
     <!--Jeu 2-->
     <figure>
-      <a href="#" target="_blank"> <img
-          src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/9bdac691416203.5e31550e9a287.jpg"
-          alt="NBA 2K21" class="game" /></a>
+      <a href="#" target="_blank"> <img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/9bdac691416203.5e31550e9a287.jpg" alt="NBA 2K21" class="game" /></a>
       <figcaption>
         NBA 2K21 - Edition Légende
       </figcaption>
