--- a/livres.html
+++ b/livres.html
@@ -147,8 +147,8 @@
   <div class="booksLine">
     <!--Livre 9-->
     <figure>
-      <a href="https://www.amazon.fr/Gomorra-ROBERTO-SAVIANO/dp/8483468468/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1576243714&sr=8-3" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81OAmpbvz5L.jpg"
-          alt="Gomorra" class="books" /></a>
+      <a href="https://www.amazon.fr/Gomorra-ROBERTO-SAVIANO/dp/8483468468/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1576243714&sr=8-3" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81OAmpbvz5L.jpg" alt="Gomorra"
+          class="books" /></a>
       <figcaption>
         Roberto Saviano
       </figcaption>
@@ -747,7 +747,7 @@
         18,00€
       </figcaption>
       <figcaption>
-      Expédié sous 1 à 3 semaines
+        Expédié sous 1 à 3 semaines
       </figcaption>
     </figure>
 
@@ -1013,7 +1013,7 @@
         Tête haute
       </figcaption>
       <figcaption>
-Rupture de stock sur Amazon
+        Rupture de stock sur Amazon
       </figcaption>
     </figure>
 
@@ -1298,8 +1298,8 @@ Rupture de stock sur Amazon
   <div class="booksLine">
     <!--Livre 81-->
     <figure>
-      <a href="https://www.amazon.fr/Dans-flammes-Notre-Dame-S%C3%A9bastien-Spitzer/dp/2226445579/ref=cm_cr_arp_d_product_top?ie=UTF8" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/817aQDgu4iL.jpg" alt="Notre Dame" class="books" /></a>
+      <a href="https://www.amazon.fr/Dans-flammes-Notre-Dame-S%C3%A9bastien-Spitzer/dp/2226445579/ref=cm_cr_arp_d_product_top?ie=UTF8" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/817aQDgu4iL.jpg" alt="Notre Dame"
+          class="books" /></a>
       <figcaption>
         Sébastien Spitzer
       </figcaption>
@@ -1328,8 +1328,8 @@ Rupture de stock sur Amazon
 
     <!--Livre 83-->
     <figure>
-      <a href="https://www.amazon.fr/DERNIERS-JUGEMENTS-AVANT-LIQUIDATION-magistrature/dp/2226238719/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1594512282&sr=8-4" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/41sJL99ZhUL.jpg"
-          alt="Derniers jugements avant liquidation" class="books" /></a>
+      <a href="https://www.amazon.fr/DERNIERS-JUGEMENTS-AVANT-LIQUIDATION-magistrature/dp/2226238719/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1594512282&sr=8-4" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/41sJL99ZhUL.jpg" alt="Derniers jugements avant liquidation" class="books" /></a>
       <figcaption>
         Gilbert Thiel
       </figcaption>
@@ -1343,8 +1343,8 @@ Rupture de stock sur Amazon
 
     <!--Livre 84-->
     <figure>
-      <a href="https://www.amazon.fr/reveille-pas-juge-qui-dort/dp/2213613389/ref=rtpb_1/257-9479405-0879257?_encoding=UTF8&pd_rd_i=2213613389&pd_rd_r=d6ee78b4-4b8c-4b8b-9c26-f3d2e246726f&pd_rd_w=yVHKy&pd_rd_wg=adqlh&pf_rd_p=11fd17e3-2e76-468d-ad1e-fcdf79abf9f0&pf_rd_r=WNFEY9JZD6FWWTG0GSWS&psc=1&refRID=WNFEY9JZD6FWWTG0GSWS" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51VWSZ065EL.jpg"
-          alt="On ne reveille pas un juge qui dort" class="books" /></a>
+      <a href="https://www.amazon.fr/reveille-pas-juge-qui-dort/dp/2213613389/ref=rtpb_1/257-9479405-0879257?_encoding=UTF8&pd_rd_i=2213613389&pd_rd_r=d6ee78b4-4b8c-4b8b-9c26-f3d2e246726f&pd_rd_w=yVHKy&pd_rd_wg=adqlh&pf_rd_p=11fd17e3-2e76-468d-ad1e-fcdf79abf9f0&pf_rd_r=WNFEY9JZD6FWWTG0GSWS&psc=1&refRID=WNFEY9JZD6FWWTG0GSWS"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51VWSZ065EL.jpg" alt="On ne reveille pas un juge qui dort" class="books" /></a>
       <figcaption>
         Gilbert Thiel
       </figcaption>
@@ -1360,8 +1360,8 @@ Rupture de stock sur Amazon
   <div class="booksLine">
     <!--Livre 81-->
     <figure>
-      <a href="https://www.amazon.fr/Mafias-Gilbert-Thiel/dp/2213672512/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1594512282&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/91ufrIUt51L.jpg" alt="Mafias" class="books" /></a>
+      <a href="https://www.amazon.fr/Mafias-Gilbert-Thiel/dp/2213672512/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1594512282&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91ufrIUt51L.jpg" alt="Mafias"
+          class="books" /></a>
       <figcaption>
         Gilbert Thiel
       </figcaption>
@@ -1373,20 +1373,20 @@ Rupture de stock sur Amazon
       </figcaption>
     </figure>
 
-    <!--Livre 82
+    <!--Livre 82-->
     <figure>
-      <a href="https://www.amazon.fr/White-fran%C3%A7aise-Bret-Easton-ELLIS/dp/2221241177/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1593296847&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/515gvByO9VL.jpg"
-          alt="Ellis - White" class="books" /></a>
+      <a href="https://www.amazon.fr/temps-tempetes-I-Collectif/dp/B08BWFVX53/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1595467809&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71GByhfLfgL.jpg"
+          alt="Sarkozy - Tempêtes" class="books" /></a>
       <figcaption>
-        Bret Easton Ellis
+        Nicolas Sarkozy
       </figcaption>
       <figcaption>
-        White
+        Le Temps des Tempêtes - Tome 1
       </figcaption>
       <figcaption>
-        8,92€
+        23,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 83
     <figure>
