--- a/livres.html
+++ b/livres.html
@@ -861,23 +861,20 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 53
+    <!--Livre 53-->
     <figure>
-      <a href="https://www.amazon.fr/mano-negra-obscures-contr%C3%B4lent-football/dp/2755640197/ref=pd_sim_14_6/257-8925375-7060938?_encoding=UTF8&pd_rd_i=2755640197&pd_rd_r=235e5697-56a9-48c6-b2b9-bf1a364899ac&pd_rd_w=WyNZU&pd_rd_wg=rWfyp&pf_rd_p=13666dbd-eacc-4961-ae51-8b11476bba29&pf_rd_r=5HNSAX5WPC8Y512Y15C7&psc=1&refRID=5HNSAX5WPC8Y512Y15C7"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61I3dBZMUXL.jpg" alt="La Mano Negra" class="books" /></a>
+      <a href="https://www.amazon.fr/M%C3%A9moires-du-commissaire-Broussard-Robert/dp/2847366695/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=robert+broussard&qid=1595521187&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81e13WwsTnL.jpg"
+          alt="Mémoires Broussard" class="books" /></a>
       <figcaption>
-        Romain Molina
+        Robert Broussard
       </figcaption>
       <figcaption>
-        La mano negra
+        Mémoires du commissaire Broussard
       </figcaption>
       <figcaption>
-        Ces forces obscures qui contrôlent le football mondial
+        12,50€
       </figcaption>
-      <figcaption>
-        17,00€
-      </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 54-->
     <figure>
@@ -1390,16 +1387,16 @@
 
     <!--Livre 83
     <figure>
-      <a href="https://www.amazon.fr/DERNIERS-JUGEMENTS-AVANT-LIQUIDATION-magistrature/dp/2226238719/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1594512282&sr=8-4" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/41sJL99ZhUL.jpg"
-          alt="Derniers jugements avant liquidation" class="books" /></a>
+      <a href="https://www.amazon.fr/M%C3%A9moires-du-commissaire-Broussard-Robert/dp/2847366695/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=robert+broussard&qid=1595521187&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81e13WwsTnL.jpg"
+          alt="Mémoires Broussard" class="books" /></a>
       <figcaption>
-        Gilbert Thiel
+        Robert Broussard
       </figcaption>
       <figcaption>
-        Derniers jugements avant liquidation
+        Mémoires du commissaire Broussard
       </figcaption>
       <figcaption>
-        18,25€
+        12,50€
       </figcaption>
     </figure>-->
 
