--- a/autres.html
+++ b/autres.html
@@ -21,7 +21,7 @@
   </navbar>
 
   <div class="othersLine">
-    <!--Autres 1-->
+    <!--Autres 1
     <figure>
       <a href="https://www.amazon.fr/AUKEY-Microphone-Enregistrement-Compatible-Windows/dp/B0721MKXQ2/ref=cm_cr_arp_d_product_top?ie=UTF8" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51NaTEP5xbL._AC_SL1500_.jpg"
           alt="Webcam" class="others" /></a>
@@ -31,7 +31,7 @@
       <figcaption>
         49,99€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Autres 2-->
     <figure>
@@ -60,7 +60,7 @@
       </figcaption>
     </figure>-->
 
-    <!--Autres 4-->
+    <!--Autres 4
     <figure>
       <a href="*" target="_blank"> <img src="https://static.fnac-static.com/multimedia/Images/FR/NR/49/63/b1/11625289/1507-1/tsp20200219145134/Star-Wars-L-Ascension-de-Skywalker-DVD.jpg" alt="Star Wars" class="others" /></a>
       <figcaption>
@@ -75,7 +75,7 @@
       <figcaption>
         Rupture de stock sur Amazon
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="othersLine">
