--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -33,7 +33,7 @@
       </figcaption>
     </figure>
 
-    <!--Jeu 2-->
+    <!--Jeu 2
     <figure>
       <a href="#" target="_blank"> <img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/9bdac691416203.5e31550e9a287.jpg" alt="NBA 2K21" class="game" /></a>
       <figcaption>
@@ -42,7 +42,7 @@
       <figcaption>
         ???€ sur PlayStation (surement 100 euros)
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Jeu 3
     <figure>
