--- a/livres.html
+++ b/livres.html
@@ -36,7 +36,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 2-->
+    <!--Livre 2
     <figure>
       <a href="https://www.amazon.fr/Passions-Nicolas-Sarkozy/dp/B07S253JD9/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1561498848&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71lrITkBVML.jpg" alt="Passions"
           class="books" /></a>
@@ -49,7 +49,7 @@
       <figcaption>
         19,50€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 3-->
     <figure>
@@ -190,7 +190,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 12-->
+    <!--Livre 12
     <figure>
       <a href="https://www.amazon.fr/Tr%C3%B4ne-fer-lInt%C3%A9grale-game-Thrones/dp/2756408522/ref=pd_sim_14_7?_encoding=UTF8&pd_rd_i=2756408522&pd_rd_r=3f9c3e44-5f05-11e9-9ab7-adaade3fec5d&pd_rd_w=WTIGB&pd_rd_wg=Xc3GJ&pf_rd_p=7e133c34-2a2a-4f4f-8372-6a26c70ca073&pf_rd_r=DY62KACJE73J3FTNY187&psc=1&refRID=DY62KACJE73J3FTNY187"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71lZsWrGaQL.jpg" alt="L'intégrale du Trône de Fer - Partie 2" class="books" /></a>
@@ -206,7 +206,7 @@
       <figcaption>
         22,90€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
@@ -1137,7 +1137,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 71-->
+    <!--Livre 71
     <figure>
       <a href="https://www.amazon.fr/Kobe-Bryant-Mamba-mentality-fa%C3%A7on/dp/2755643323/ref=pd_sim_14_5/257-8925375-7060938?_encoding=UTF8&pd_rd_i=2755643323&pd_rd_r=2a2bdb30-9e35-4577-bdb7-3daf8e3f9be7&pd_rd_w=WigFl&pd_rd_wg=gaL77&pf_rd_p=13666dbd-eacc-4961-ae51-8b11476bba29&pf_rd_r=FB6174GVNX2M5NH18EYM&psc=1&refRID=FB6174GVNX2M5NH18EYM"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/41OGHVjhhLL.jpg" alt="Kobe 1" class="books" /></a>
@@ -1150,9 +1150,9 @@
       <figcaption>
         Rupture de stock sur Amazon
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 72-->
+    <!--Livre 72
     <figure>
       <a href="https://www.amazon.fr/Kobe-Bryant-Showboat-Roland-Lazenby/dp/2378150105/ref=pd_bxgy_img_2/257-8925375-7060938?_encoding=UTF8&pd_rd_i=2378150105&pd_rd_r=353cd523-760f-49ab-8ba2-310fb010b2e8&pd_rd_w=kQjrf&pd_rd_wg=bgEQa&pf_rd_p=da1675de-3974-4ba2-b26f-c06b987f79cb&pf_rd_r=FDPPK1RPS0DBF89E02KH&psc=1&refRID=FDPPK1RPS0DBF89E02KH"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81ulDCPahAL.jpg" alt="Kobe 2" class="books" /></a>
@@ -1165,7 +1165,7 @@
       <figcaption>
         24,00€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
@@ -1184,7 +1184,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 74-->
+    <!--Livre 74
     <figure>
       <a href="https://www.amazon.fr/Encore-instant-Claude-Sarraute/dp/2081390671/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1585677833&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61WT4n63tUL.jpg"
           alt="Encore un instant" class="books" /></a>
@@ -1197,7 +1197,7 @@
       <figcaption>
         19,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 75-->
     <figure>
@@ -1370,7 +1370,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 82-->
+    <!--Livre 82
     <figure>
       <a href="https://www.amazon.fr/temps-tempetes-I-Collectif/dp/B08BWFVX53/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1595467809&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71GByhfLfgL.jpg"
           alt="Sarkozy - Tempêtes" class="books" /></a>
@@ -1383,7 +1383,7 @@
       <figcaption>
         23,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 83
     <figure>
